# ImpetusAI

./: .env  .env.example  .gitignore  01-BUSINESS_REQUIREMENTS_DOCUMENT.md  02-SOFTWARE_REQUIREMENTS_SPECIFICATION.md  03-ARCHITECTURE_DOCUMENT.md  04-IMPLEMENTATION_PLAN.md  05-TECHNOLOGY_STACK_COMPARISON.md  CLAUDE.md  ImpetusAI_MVP_Features.md  ImpetusAI_Post_MVP_Roadmap.docx  README.md  docker-compose.yml  implementation_plan.md  initial_implementation_plan.md  task.md  test_signup.py  verification_plan.md  walkthrough.md
.claude/: settings.json  settings.local.json
ai/: pyproject.toml
ai/agents/: governance_agent.py  hr_policy.py  it_support.py  leave_agent.py  leave_data.py  supervisor.py  timesheet_agent.py  timesheet_data.py
ai/impetusai_ai.egg-info/: PKG-INFO  SOURCES.txt
ai/llm/: gateway.py
ai/rag/: retriever.py
backend/: Dockerfile  impetusai.db  pyproject.toml  test_rename_api.py  test_rename_api_existing.py  test_testclient.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  analytics.py  auth.py  chat.py  documents.py  governance.py  leave.py  tickets.py  timesheet.py
backend/app/models/: __init__.py  access_request.py  conversation.py  document.py  leave_balance.py  leave_request.py  ticket.py  timesheet.py  user.py
backend/app/schemas/: analytics.py  chat.py  document.py  governance.py  leave.py  ticket.py  timesheet.py  user.py
backend/app/services/: auth_service.py  chat_service.py  hr_service.py  it_team.py  ticket_service.py
backend/chroma_data/: chroma.sqlite3
backend/demo_policies/: benefits_policy.md  code_of_conduct.md  leave_policy.md  remote_work_policy.md
backend/impetusai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_governance.py
chroma_data/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.js
impetusai_ai.egg-info/: SOURCES.txt  requires.txt
scripts/: re_embed.py
(+3 files in other folders)
